# rules_scala3

./: .bazelrc  .bazelrc_shared  .gitignore  .gitmodules  .scalafix.conf  .scalafmt.conf  BUILD  Dependencies.scala  MODULE.bazel  Makefile  README.md  WORKSPACE  annex_deps_install.json  annex_install.json  annex_proto_install.json  annex_scalafmt_install.json  deps_install.json  flake.nix  justfile  nixpkgs.nix  shell.nix
jmh/: BUILD  (+3 more)
tests/: .bazelrc  BUILD  Dependencies.scala  MODULE.bazel  WORKSPACE  annex_install.json  annex_test_install.json  flake.nix  workspace.bzl
tests/binary/reflect/: BUILD  Reflect.scala  test
tests/binary/resource/: BUILD  example.scala  test
tests/binary/simple/: BUILD  one_discovered.scala  test
tests/compat/ported_tests/: BUILD  Exported.scala  HelloLib.scala  HelloLibTest.scala  HelloLibTest2.scala  MacroTest.scala  OtherLib.scala  Runtime.scala  ScalaBinary.scala  test
tests/compat/scalacopts/: BUILD  Deprecated.scala  test
tests/compile/error/: BUILD  Example.scala  test
tests/coverage/: BUILD  test
tests/deployjar/: BUILD  TestBinary.scala  TestClass.scala  expected  test
tests/grpc/: AuthService.scala  BUILD  rpc.proto
tests/jmh/: ArrayBench.scala  BUILD  test
tests/mockutil/: BUILD.bazel  MockLib.scala
tests/proto/: BUILD  auth.proto  expected  test  zero.proto
tests/providers/: BUILD  build.bzl  test
tests/scala/: BUILD
tests/scala3/: BUILD  Main.scala  MultiversalEquality.scala  test
tests/scaladoc/: A.scala  B.scala  BUILD  test
tests/scalajs/: BUILD  ScalaJsApp.scala
tests/tagging/: BUILD  test
(+283 files in other folders)
