module(name = "rules_scala3")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.25.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
